--- a/Spring/v5SpringTilesHibernateSecurity/pom.xml
+++ b/Spring/v5SpringTilesHibernateSecurity/pom.xml
@@ -72,7 +72,28 @@
       <scope>test</scope>
     </dependency>
 
-    <!-- Hibernate 4 dependencies -->
+    <!--Adding spring Security-->
+    <!-- https://mvnrepository.com/artifact/org.springframework.security/spring-security-web -->
+    <dependency>
+      <groupId>org.springframework.security</groupId>
+      <artifactId>spring-security-web</artifactId>
+      <version>${spring.version}</version>
+    </dependency>
+
+    <dependency>
+      <groupId>org.springframework.security</groupId>
+      <artifactId>spring-security-config</artifactId>
+       <version>${spring.version}</version>
+    </dependency>
+    <dependency>
+      <groupId>commons-logging</groupId>
+      <artifactId>commons-logging</artifactId>
+      <version>1.1.1</version>
+    </dependency>
+
+
+
+      <!-- Hibernate 4 dependencies -->
     <dependency>
       <groupId>org.hibernate</groupId>
       <artifactId>hibernate-core</artifactId>
