--- a/Spring/v5SpringTilesHibernateSecurity/src/main/webapp/WEB-INF/web.xml
+++ b/Spring/v5SpringTilesHibernateSecurity/src/main/webapp/WEB-INF/web.xml
@@ -7,21 +7,13 @@
 
   <display-name>Spring MVC Hibernate CRUD Example</display-name>
 
-  <filter>
-    <filter-name>springSecurityFilterChain</filter-name>
-    <filter-class>org.springframework.web.filter.DelegatingFilterProxy</filter-class>
-  </filter>
-  <filter-mapping>
-    <filter-name>springSecurityFilterChain</filter-name>
-    <url-pattern>/*</url-pattern>
-  </filter-mapping>
 
   <context-param>
     <param-name>contextConfigLocation</param-name>
     <param-value>
       /WEB-INF/spring-servlet.xml
-      /WEB-INF/config/security-config.xml
-    </param-value>
+      /WEB-INF/security-context.xml
+  </param-value>
   </context-param>
   <listener>
     <listener-class>org.springframework.web.context.ContextLoaderListener</listener-class>
@@ -38,5 +30,16 @@
     <servlet-name>spring</servlet-name>
     <url-pattern>/</url-pattern>
   </servlet-mapping>
+
+
+<!--  <filter>
+    <filter-name>springSecurityFilterChain</filter-name>
+    <filter-class>org.springframework.web.filter.DelegatingFilterProxy</filter-class>
+  </filter>
+
+  <filter-mapping>
+    <filter-name>springSecurityFilterChain</filter-name>
+    <url-pattern>/*</url-pattern>
+  </filter-mapping>-->
 
 </web-app>
