--- a/Spring/v6SpringService&GatewayModule/v61SpringGatewayModule/pom.xml
+++ b/Spring/v6SpringService&GatewayModule/v61SpringGatewayModule/pom.xml
@@ -222,6 +222,12 @@
       <artifactId>jackson-annotations</artifactId>
       <version>2.8.0</version>
     </dependency>
+
+    <dependency>
+      <groupId>com.jayway.jsonpath</groupId>
+      <artifactId>json-path</artifactId>
+      <version>2.4.0</version>
+    </dependency>
   </dependencies>
 
 
