--- a/SpringBoot/bankingSolution/pom.xml
+++ b/SpringBoot/bankingSolution/pom.xml
@@ -12,7 +12,7 @@
 	<artifactId>bankingSolution</artifactId>
 	<version>0.0.1-SNAPSHOT</version>
 	<name>bankingSolution</name>
-	<description>Demo project for Spring Boot</description>
+	<description>User end for Online Banking Solution</description>
 
 	<properties>
 		<java.version>1.8</java.version>
@@ -29,6 +29,36 @@
 			<artifactId>spring-boot-starter-test</artifactId>
 			<scope>test</scope>
 		</dependency>
+
+		<dependency>
+			<groupId>org.springframework.boot</groupId>
+			<artifactId>spring-boot-starter-thymeleaf</artifactId>
+		</dependency>
+
+		<dependency>
+			<groupId>org.springframework.boot</groupId>
+			<artifactId>spring-boot-starter-jdbc</artifactId>
+		</dependency>
+
+		<dependency>
+			<groupId>org.springframework.boot</groupId>
+			<artifactId>spring-boot-starter-data-jpa</artifactId>
+		</dependency>
+
+		<dependency>
+			<groupId>mysql</groupId>
+			<artifactId>mysql-connector-java</artifactId>
+		</dependency>
+
+		<!-- https://mvnrepository.com/artifact/org.projectlombok/lombok -->
+		<dependency>
+			<groupId>org.projectlombok</groupId>
+			<artifactId>lombok</artifactId>
+			<version>1.18.2</version>
+			<scope>provided</scope>
+		</dependency>
+
+
 	</dependencies>
 
 	<build>
