--- a/SpringBoot/image-gallery-master/image-gallery-master/src/main/resources/application.properties
+++ b/SpringBoot/image-gallery-master/image-gallery-master/src/main/resources/application.properties
@@ -18,7 +18,7 @@ spring.h2.console.path=/h2
 
 
 
-spring.http.multipart.max-file-size=500KB
-spring.http.multipart.max-request-size=500KB
+spring.http.multipart.max-file-size=10MB
+spring.http.multipart.max-request-size=10MB
 
 server.port=9080
