--- a/SpringBoot/image-gallery-master/image-gallery-master/pom.xml
+++ b/SpringBoot/image-gallery-master/image-gallery-master/pom.xml
@@ -70,6 +70,18 @@
             <scope>provided</scope>
         </dependency>
 
+
+		<dependency>
+			<groupId>org.apache.poi</groupId>
+			<artifactId>poi</artifactId>
+			<version>4.1.1</version>
+		</dependency>
+
+		<dependency>
+			<groupId>org.apache.poi</groupId>
+			<artifactId>poi-ooxml</artifactId>
+			<version>4.1.1</version>
+		</dependency>
     </dependencies>
 
 	<build>
