--- a/MicroService/JavaBrains workshop/movie-config-server/src/main/resources/application.properties
+++ b/MicroService/JavaBrains workshop/movie-config-server/src/main/resources/application.properties
@@ -1,2 +1,2 @@
 server.port=8888
-spring.cloud.config.server.git.uri=
+spring.cloud.config.server.git.uri=C:/Users/BS-033/Documents/GitHub/Java/MicroService/JavaBrains workshop/properties
