--- a/MicroService/JavaBrains workshop/movie-config-server/src/main/resources/application.properties
+++ b/MicroService/JavaBrains workshop/movie-config-server/src/main/resources/application.properties
@@ -1,2 +1,3 @@
 server.port=8888
-spring.cloud.config.server.git.uri=https://github.com/SbrTa/Java
+management.endpoints.web.exposure.include=*
+spring.cloud.config.server.git.uri=https://github.com/SbrTa/ConfigServer
