--- a/MicroService/JavaBrains workshop/movie-config-server/src/main/resources/application.properties
+++ b/MicroService/JavaBrains workshop/movie-config-server/src/main/resources/application.properties
@@ -1,3 +1,5 @@
 server.port=8888
 management.endpoints.web.exposure.include=*
 spring.cloud.config.server.git.uri=https://github.com/SbrTa/ConfigServer
+#spring.cloud.config.server.git.username=email
+#spring.cloud.config.server.git.password=password
