--- a/SpringBoot/rabbitmq/consumer/src/main/resources/application.properties
+++ b/SpringBoot/rabbitmq/consumer/src/main/resources/application.properties
@@ -1,1 +1,7 @@
+server.port=8081
 
+#DEFAULT RABBITMQ CONFIG
+spring.rabbitmq.host=localhost
+spring.rabbitmq.port=5672
+spring.rabbitmq.username=guest
+spring.rabbitmq.password=guest
