--- a/SpringBoot/rabbitmq/producer/src/main/resources/application.properties
+++ b/SpringBoot/rabbitmq/producer/src/main/resources/application.properties
@@ -1,3 +1,6 @@
+server.port=8080
+
+#DEFAULT RABBITMQ CONFIG
 spring.rabbitmq.host=localhost
 spring.rabbitmq.port=5672
 spring.rabbitmq.username=guest
